@@ -2,52 +2,45 @@ package com.example.zadanie.contractor.domain;
 
 import com.example.zadanie.contractor.model.ContractorDto;
 import com.example.zadanie.contractor.model.ContractorDtoMapper;
-import lombok.Builder;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import javax.persistence.EntityNotFoundException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-@Builder
 @Service
 @RequiredArgsConstructor
-
+@Slf4j
 public class ContractorService {
     private final ContractorRepository contractorRepository;
     private final ContractorDtoMapper contractorDtoMapper;
 
-
     public List<ContractorDto> findAll() {
-        return contractorRepository.findAll().stream().map(contractorDtoMapper::map).collect(Collectors.toList());
-
+        log.info("Wyszukano wszystkich użytkowników.");
+        return contractorRepository.findAll().stream()
+                .map(contractorDtoMapper::toContractorDto)
+                .toList();
+    }
+    public Optional<ContractorDto> findById(final Long contractorId) {
+        return contractorRepository.findById(contractorId).map(contractorDtoMapper::toContractorDto);
     }
 
-    public Optional<ContractorDto> findById(Long id) {
-        return contractorRepository.findById(id).map(contractorDtoMapper::map);
-
+    public void deleteById(final Long contractorId) {
+        contractorRepository.deleteById(contractorId);
     }
 
-    public void deleteById(Long id) {
-
-        contractorRepository.deleteById(id);
+    public ContractorDto create(final ContractorDto contractorDto) {
+        log.info("Stworzono nowego użytkownika : NAZWA - {}, NIP - {}, ADRES - {}, KOD POCZTOWY - {},Miasto - {}, KRAJ - {}"
+                ,contractorDto.getName(),contractorDto.getNip()
+                ,contractorDto.getAddress(),contractorDto.getPostalCode(),contractorDto.getCity(),contractorDto.getCountry());
+        return contractorDtoMapper.toContractorDto(contractorRepository.save(contractorDtoMapper.toCreateContractor(contractorDto)));
     }
 
-    public ContractorDto create(ContractorDto contractorDto) {
-        Contractor contractor = contractorDtoMapper.map(contractorDto);
-        Contractor saveContractor = contractorRepository.save(contractor);
-        return contractorDtoMapper.map(saveContractor);
-    }
-
-    public Optional<ContractorDto> update(Long id, ContractorDto contractorDto) {
-        if (contractorRepository.existsById(id)) {
-            Contractor contractor = contractorRepository.findById(id).get();
-            Contractor updateContractor = contractorDtoMapper.map(contractorDto).toBuilder().creationDate(contractor.getCreationDate()).id(contractor.getId()).build();
-            Contractor saveContractor = contractorRepository.save(updateContractor);
-            ContractorDto mapContractorDto = contractorDtoMapper.map(saveContractor);
-            return Optional.of(mapContractorDto);
-        }
-        return Optional.empty();
+    public Optional<ContractorDto> update(final Long contractorId,final ContractorDto contractorDto) {
+        Contractor contractor = contractorRepository.findById(contractorId).orElseThrow(
+                () -> new EntityNotFoundException("Podany id nie istnieje"));
+        return Optional.of(contractorDtoMapper.toContractorDto(contractorRepository.save(contractorDtoMapper.toUpdateContractor(contractorDto))));
     }
 }
